--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,14 @@
             <artifactId>jjwt-jackson</artifactId> <!-- for JSON processing -->
             <version>0.12.3</version>
         </dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter</artifactId>
+		</dependency>
 
     </dependencies>
 
