--- a/.github/workflows/keep-alive.yml
+++ b/.github/workflows/keep-alive.yml
@@ -2,8 +2,8 @@ name: Keep Render Services Alive
 
 on:
   schedule:
-    - cron: "*/10 * * * *"
-  workflow_dispatch:
+    - cron: "*/2 * * * *"  # Every 2 minutes
+  workflow_dispatch:  # Manual trigger
 
 jobs:
   ping:
