Changed trigger work flow

--- a/.github/workflows/render-deploy.yml
+++ b/.github/workflows/render-deploy.yml
@@ -13,11 +13,12 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # OPTIONAL: fast sanity check (no Docker build)
+      - name: Make mvnw executable
+        run: chmod +x mvnw
+
       - name: Validate Maven project
         run: ./mvnw -q -DskipTests=true validate
 
-      # Trigger Render deploy
       - name: Trigger Render Deploy
         run: |
           curl -X POST "$RENDER_DEPLOY_HOOK"
